--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <h1>Welcome to</h1>
+                        <h1>Welcome to Machine Learning</h1>
                     </div>
                 </div>
                 <div class="row align-items-end">
